<resources>
    <string name="app_name">LicorLibrary</string>
    <string name="Licor_Register">Licor Register</string>
    <string name="Licor_Name">Licor name:</string>
    <string name="TextView_Author">Author</string>
    <string name="Liters_Capacity">Liters Capacity</string>
    <string name="Licor_Description">Description</string>
    <string name="Save_Licor">Save</string>
    <string name="Info">Author: %s \n, Licor´s Name: %s \n, Capacity(Lts): %d \n, Description: %s \n, Type: %s</string>
    <string name="Licor">Licor</string>
    <string name="NotLicor">No licor</string>
    <string name="NmberOne">1</string>
    <string name="NumberTwo">2</string>
    <string name="NumberThree">3</string>
    <string name="Date">Fecha</string>
    <string name="title_activity_splash_activuty">SplashActivuty</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Licor_Tittle">Brandy</string>
    <string name="Author_Tittle">Emmanuel Arango</string>
    <string name="title_activity_bottom">Bottom_Activity</string>
    <string name="title_list">Licores</string>
    <string name="title_new">Nuevo</string>
    <string name="title_update">Editar</string>
    <string name="title_delete">Eliminar</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>