<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_mobile"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/newLicorFragment"
        android:name="com.LicorLibrary.licorlibrary.ui.newlicor.NewLicorFragment"
        android:label="@string/title_new"
        tools:layout="@layout/fragment_new_licor">
        <action
            android:id="@+id/action_newLicorFragment_to_detalleFragment"
            app:destination="@id/detalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.LicorLibrary.licorlibrary.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_newLicorFragment"
            app:destination="@id/newLicorFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleFragment"
        android:name="com.LicorLibrary.licorlibrary.ui.detalle.DetalleFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="licor"
            app:argType="com.LicorLibrary.licorlibrary.models.Licor" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.LicorLibrary.licorlibrary.ui.update.UpdateFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/deleteFragment"
        android:name="com.LicorLibrary.licorlibrary.ui.delete.DeleteFragment"
        android:label="@string/title_delete"
        tools:layout="@layout/fragment_delete" />
</navigation>